# sparrow

./: .gitignore  CHANGES  CMakeLists.txt  LICENSE  README
cmake/: candid.cmake
ex/: CMakeLists.txt
ex/sample1/: CMakeLists.txt  main.cpp
ex/sample1/include/: erm.h
ex/sample1/src/: erm.cpp
ex/sample3-file-server/: CMakeLists.txt  Main.cpp  README
ex/sample3-file-server/.svn/: all-wcprops  entries
ex/sample3-file-server/Data/.svn/: all-wcprops  entries
ex/sample3-file-server/Data/Static/.svn/: all-wcprops  entries
include/dbix/: assignment.h  column.h  record.h  table.h  types.h  value.h
include/dbix/types/: boolean.h  integer.h  number.h  text.h  type.h
include/sparrow/: tap_base.h  tap_more_1.h  tap_suite.h  test_run.h
include/sparrow/coat/: sptr.h  uptr.h
src/: CMakeLists.txt
src/dbix/: assignment.cpp  column.cpp  record.cpp  table.cpp  types.cpp  value.cpp
src/dbix/types/: boolean.cpp  integer.cpp  number.cpp  text.cpp  type.cpp
src/sparrow/: tap_base.cpp  tap_more_1.cpp  tap_suite.cpp  test_run.cpp
t/: CMakeLists.txt  dbix_table_test.cpp  dbix_types_test.cpp  dbix_value_test.cpp  tap_test.cpp  tests
